fix(uikit): fix z-index for stepper

--- a/packages/uikit/src/stepper/index.module.scss
+++ b/packages/uikit/src/stepper/index.module.scss
@@ -14,7 +14,6 @@
     content: "";
 
     position: absolute;
-    z-index: -1;
     top: 25%;
     left: 0.5%;
 
@@ -39,6 +38,7 @@
       cursor: pointer;
 
       position: relative;
+      z-index: 1;
 
       width: 1rem;
       height: 1rem;
@@ -95,6 +95,7 @@
         content: "\2713";
 
         position: absolute;
+        z-index: 1;
         top: -10%;
         right: 20%;
 
